# gitlab-ci-lab

./: README.md
gitlab-ci-boilerplate/: README.md  app.py
gitlab-ci-build-docker-image/: .gitlab-ci.yml  Dockerfile  README.md  index.html
gitlab-ci-build-docker-image-using-cache/: README.md
gitlab-ci-flask-docker/: .gitlab-ci.yml  Dockerfile  README.md
gitlab-ci-flask-multi-stage-docker/: .gitlab-ci.yml  Dockerfile  README.md  calc_hash.py  calc_requirements_hash.sh
gitlab-ci-javascript-boilerplate/: .gitlab-ci.yml  README.md  index.js  package.json
gitlab-ci-manual-deploy/: .gitlab-ci.yml  README.md
gitlab-ci-mariadb/: .gitlab-ci.yml  README.md  create_db.py  create_db.sql  requirements.txt  test_mariadb_access.py
gitlab-ci-memcached/: .gitlab-ci.yml  README.md  requirements.txt  test_memcached.py
gitlab-ci-postgres/: .gitlab-ci.yml  README.md  create_db.py  create_db.sql  requirements.txt  test_postgres_access.py
gitlab-ci-python-boilerplate/: .gitlab-ci.yml  .pylintrc  test_app.py
gitlab-ci-python-poetry-caching/: .gitlab-ci.yml  README.md  app.py  pyproject.toml
gitlab-ci-python-poetry-caching/tests/: test_poetrycaching.py
gitlab-ci-redis/: .gitlab-ci.yml  README.md  requirements.txt  test_redis.py
gitlab-ci-reflection/: .gitlab-ci.yml  README.md
gitlab-ci-s3/: .gitlab-ci.yml  README.md  docker-compose.yml  test_s3_access.py
gitlab-pages-hello-world/: .gitlab-ci.yml  README.md  index.html
