[tool.poetry]
name = "poetrycaching"
version = "0.1.0"
description = ""
authors = ["Henrik Treadup <henrik.treadup@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pendulum = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
